--- a/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification.ini
@@ -81,9 +81,11 @@ include_picture = 1
 # The notification server will replace it with the correct eid of the alarm
 
 # BESTMATCH should be used only if you are using bestmatch for FID in detect_wrapper.sh
-picture_url = https://yourserver.ddns.net:80/zm/index.php?view=image&eid=EVENTID&fid=BESTMATCH&width=600&username=admin&password=password
-#picture_url = https://yourserver.ddns.net:9999/zm/index.php?view=image&eid=EVENTID&fid=snapshot&width=600&username=admin&password=password
-#picture_url = https://yourserver.ddns.net:9999/zm/index.php?view=image&eid=EVENTID&fid=alarm&width=600&username=admin&password=password
+# objdetect is ONLY available in ZM 1.33+
+#picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=objdetect&width=600&username=admin&password=password
+picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=BESTMATCH&width=600&username=admin&password=password
+#picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=snapshot&width=600&username=admin&password=password
+#picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=alarm&width=600&username=admin&password=password
 
 [hook]
 
@@ -107,6 +109,12 @@ use_hook_description = 1
 keep_frame_match_type = 1
 
 # list of monitors for which hooks will not run
-# skip_monitors = 2,3,4
+# skip_monitors = 2
+
+
+# if enabled, will store the bounding box frame
+# as objdetect.jpg in the events folder.
+# Requires ZM >=1.33. Don't enable this if you are running an older version
+#store_frame_in_zm = 1
 
 
