--- a/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification.ini
@@ -22,6 +22,8 @@ enable = 1
 
 # Auth token store location (default: /var/lib/zmeventnotification/push/tokens.txt).
 token_file = /var/lib/zmeventnotification/push/tokens.txt
+
+[mqtt]
 # Use MQTT for messaging (default: 0)
 enable = 0
 
@@ -33,7 +35,6 @@ server = 127.0.0.1
 
 # Password 
 # password =  
-
 
 [ssl]
 # Enable SSL (default: 1).
