--- a/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification.ini
@@ -21,7 +21,7 @@ enable = 1
 # api_key =
 
 # Auth token store location (default: /var/lib/zmeventnotification/push/tokens.txt).
-token_file = /var/lib/zmeventnotification/push/tokens.txt
+#token_file = /var/lib/zmeventnotification/push/tokens.txt
 
 [mqtt]
 # Use MQTT for messaging (default: 0)
@@ -107,7 +107,7 @@ use_hook_description = 1
 keep_frame_match_type = 1
 
 # list of monitors for which hooks will not run
-# skip_monitors = 2
+# skip_monitors = 2,3,7
 
 
 # if enabled, will store the bounding box frame
