Minor adjustments to zmeventnotification.

--- a/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification.ini
@@ -1,5 +1,6 @@
 # Configuration file for zmeventnotification.pl 
 
+
 [network]
 # Port for Websockets connection (default: 9000).
 port = 9000
@@ -38,6 +39,7 @@ server = 127.0.0.1
 [ssl]
 # Enable SSL (default: yes)
 enable = yes
+
 # Location to SSL cert (no default).
 cert = /etc/apache2/ssl/zoneminder.crt
 
@@ -77,8 +79,8 @@ include_picture = yes
 
 # BESTMATCH should be used only if you are using bestmatch for FID in detect_wrapper.sh
 # objdetect is ONLY available in ZM 1.33+
-#picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=objdetect&width=600&username=admin&password=password
-#picture_url = https://yourdomain.org:8889/zm/index.php?view=image&eid=EVENTID&fid=objdetect&width=600&username=admin&password=password
+#picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=BESTMATCH&width=600&username=admin&password=password
+picture_url = https://yourdomain.org:8889/zm/index.php?view=image&eid=EVENTID&fid=objdetect&width=600&username=admin&password=password
 #picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=snapshot&width=600&username=admin&password=password
 #picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=alarm&width=600&username=admin&password=password
 
@@ -114,3 +116,5 @@ keep_frame_match_type = yes
 # Note: you also need to set write_image_to_zm=yes in objectconfig.ini
 # default: no
 # hook_pass_image_path = yes
+
+
