Update zmeventnotifications to version 3.4

--- a/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification.ini
@@ -1,6 +1,5 @@
 # Configuration file for zmeventnotification.pl 
 
-
 [network]
 # Port for Websockets connection (default: 9000).
 port = 9000
@@ -40,15 +39,12 @@ server = 127.0.0.1
 # Enable SSL (default: yes)
 enable = yes
 
-# Location to SSL cert (no default).
 cert = /etc/apache2/ssl/zoneminder.crt
-
-# Location to SSL key (no default).
 key = /etc/apache2/ssl/zoneminder.key
 
 [customize]
 # Display messages to console (default: no).
-verbose = yes
+verbose = no
 
 # Interval, in seconds, after which we will check for new events (default: 5).
 event_check_interval = 5
@@ -99,7 +95,7 @@ picture_url = https://yourdomain.org:8889/zm/index.php?view=image&eid=EVENTID&fi
 
 use_hook_description = yes
 
-# If 1 will will append an [a] for alarmed frame match
+# If yes will will append an [a] for alarmed frame match
 # [s] for snapshot match or [x] if not using bestmatch
 # really only a debugging feature but useful to know
 # where object detection is working or failing
