Update zmeventnotification to version 3.7

--- a/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification.ini
@@ -1,5 +1,6 @@
 # Configuration file for zmeventnotification.pl 
 
+
 [network]
 # Port for Websockets connection (default: 9000).
 port = 9000
@@ -20,7 +21,7 @@ enable = yes
 # api_key =
 
 # Auth token store location (default: /var/lib/zmeventnotification/push/tokens.txt).
-token_file = /config/push/tokens.txt
+token_file=/config/push/tokens.txt
 
 # Use MQTT for messaging (default: no)
 [mqtt]
@@ -35,6 +36,7 @@ server = 127.0.0.1
 # Password 
 # password =  
 
+
 [ssl]
 # Enable SSL (default: yes)
 enable = yes
@@ -44,7 +46,7 @@ key = /etc/apache2/ssl/zoneminder.key
 
 [customize]
 # Display messages to console (default: no).
-verbose = no
+console_logs = no
 
 # Interval, in seconds, after which we will check for new events (default: 5).
 event_check_interval = 5
