Update zmeventnotificationserver to ver 3.8

--- a/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification.ini
@@ -21,7 +21,7 @@ enable = yes
 # api_key =
 
 # Auth token store location (default: /var/lib/zmeventnotification/push/tokens.txt).
-token_file=/config/push/tokens.txt
+token_file = /config/push/tokens.txt
 
 # Use MQTT for messaging (default: no)
 [mqtt]
@@ -41,7 +41,10 @@ server = 127.0.0.1
 # Enable SSL (default: yes)
 enable = yes
 
+# Location to SSL cert (no default).
 cert = /etc/apache2/ssl/zoneminder.crt
+
+# Location to SSL key (no default).
 key = /etc/apache2/ssl/zoneminder.key
 
 [customize]
