Update zmeventnotification to 4.4

--- a/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification.ini
@@ -83,10 +83,18 @@ include_picture = yes
 
 # BESTMATCH should be used only if you are using bestmatch for FID in detect_wrapper.sh
 # objdetect is ONLY available in ZM 1.33+
-#picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=BESTMATCH&width=600&username=admin&password=password
-picture_url = https://yourdomain.org:8889/zm/index.php?view=image&eid=EVENTID&fid=objdetect&width=600&username=admin&password=password
-#picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=snapshot&width=600&username=admin&password=password
-#picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=alarm&width=600&username=admin&password=password
+
+# ** DO NOT PUT PASSWORD AND USERNAME IN URL, see below **
+picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=BESTMATCH&width=600
+#picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=objdetect&width=600
+#picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=snapshot&width=600
+#picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=alarm&width=600
+
+# You need ot specify your ZM portal username and password here. They will be appended to the picture_url
+# to be able to load the image. DO NOT put the password in the URL because it may have special characters
+# like "&@# etc that will be considered as URL params/segments/invalid characters
+picture_portal_username=yourusername
+picture_portal_password=yourpassword
 
 [hook]
 
@@ -120,5 +128,3 @@ keep_frame_match_type = yes
 # Note: you also need to set write_image_to_zm=yes in objectconfig.ini
 # default: no
 # hook_pass_image_path = yes
-
-
