Update zmeventnotification server to 4.5

--- a/zmeventnotification/objectconfig.ini
+++ b/zmeventnotification/objectconfig.ini
@@ -5,9 +5,14 @@
 # duplicate it inside the correct [monitor-<num>] section
 
 [general]
-portal=https:/server/zm
-user=admin
-password=password
+# This is an optional file
+# If specified, you can specify tokens with secret values in that file
+# and onlt refer to the tokens in your main config file
+secrets=/etc/zm/secrets.ini
+
+portal=!ZM_PORTAL
+user=!ZM_USER
+password=!ZM_PASSWORD
 allow_self_signed=yes
 # if yes, last detection will be stored for monitors
 # and bounding boxes that match, along with labels
