--- a/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification.ini
@@ -1,5 +1,10 @@
 # Configuration file for zmeventnotification.pl 
 
+[general]
+# This is an optional file
+# If specified, you can specify tokens with secret values in that file
+# and onlt refer to the tokens in your main config file
+secrets = /config/secrets.ini
 
 [network]
 # Port for Websockets connection (default: 9000).
@@ -52,6 +57,8 @@ key = /etc/apache2/ssl/zoneminder.key
 
 [customize]
 # Display messages to console (default: no).
+# this is only needed when you are running it manually on command line
+# you don't need this if you already have ZM DEBUG logs on for ES
 console_logs = no
 
 # Interval, in seconds, after which we will check for new events (default: 5).
@@ -85,7 +92,7 @@ include_picture = yes
 # objdetect is ONLY available in ZM 1.33+
 
 # ** DO NOT PUT PASSWORD AND USERNAME IN URL, see below **
-picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=BESTMATCH&width=600
+picture_url = !ZMES_PICTURE_URL
 #picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=objdetect&width=600
 #picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=snapshot&width=600
 #picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fid=alarm&width=600
@@ -93,8 +100,8 @@ picture_url = https://yourportal.ddns.net/zm/index.php?view=image&eid=EVENTID&fi
 # You need ot specify your ZM portal username and password here. They will be appended to the picture_url
 # to be able to load the image. DO NOT put the password in the URL because it may have special characters
 # like "&@# etc that will be considered as URL params/segments/invalid characters
-picture_portal_username=yourusername
-picture_portal_password=yourpassword
+picture_portal_username=!ZM_USER
+picture_portal_password=!ZM_PASSWORD
 
 [hook]
 
@@ -128,3 +135,5 @@ keep_frame_match_type = yes
 # Note: you also need to set write_image_to_zm=yes in objectconfig.ini
 # default: no
 # hook_pass_image_path = yes
+
+
