Update zmeventserver to 4.6

--- a/zmeventnotification/objectconfig.ini
+++ b/zmeventnotification/objectconfig.ini
@@ -202,11 +202,24 @@ known_images_path=/var/lib/zmeventnotification/known_faces
 # quick overview: 
 # num_jitters is how many times to distort images 
 # upsample_times is how many times to upsample input images (for small faces, for example)
-# model can be hog or cnn. cnn may be more accurate, but I haven't found it to be 
-
+# model can be hog or cnn. cnn will more accurate, but much slower
 face_num_jitters=1
 face_model=hog
 face_upsample_times=1
+
+# This is maximum distance of the face under test to the closest matched
+# face cluster. The larger this distance, larger the chances of misclassification.
+# 
+face_recog_dist_threshold=0.6
+
+# When we are first training the face recognition model with known faces,
+# by default we use hog because we assume you will supply well lit, front facing faces
+# However, if you are planning to train with profile photos or hard to see faces, you 
+# may want to change this to cnn. Note that this increases training time, but training only
+# happens once, unless you retrain again by removing the training model
+
+face_train_model=hog
+
 #if a face doesn't match known names, we will detect it as 'unknown face'
 # you can change that to something that suits your personality better ;-)
 #unknown_face_name=invader
