Some cleanup in preparation for 5.3.

--- a/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification.ini
@@ -4,7 +4,7 @@
 # This is an optional file
 # If specified, you can specify tokens with secret values in that file
 # and onlt refer to the tokens in your main config file
-secrets = /config/secrets.ini
+secrets = /etc/zm/secrets.ini
 
 [network]
 # Port for Websockets connection (default: 9000).
@@ -26,7 +26,7 @@ enable = yes
 # api_key =
 
 # Auth token store location (default: /var/lib/zmeventnotification/push/tokens.txt).
-token_file = /config/push/tokens.txt
+token_file = /var/lib/zmeventnotification/push/tokens.txt
 
 # Use MQTT for messaging (default: no)
 [mqtt]
@@ -49,11 +49,8 @@ server = 127.0.0.1
 # Enable SSL (default: yes)
 enable = yes
 
-# Location to SSL cert (no default).
-cert = /etc/apache2/ssl/zoneminder.crt
-
-# Location to SSL key (no default).
-key = /etc/apache2/ssl/zoneminder.key
+cert = !ES_CERT_FILE
+key = !ES_KEY_FILE
 
 [customize]
 # Display messages to console (default: no).
@@ -134,6 +131,4 @@ keep_frame_match_type = yes
 
 # Note: you also need to set write_image_to_zm=yes in objectconfig.ini
 # default: no
-# hook_pass_image_path = yes
-
-
+# hook_pass_image_path = no
