--- a/zmeventnotification/secrets.ini
+++ b/zmeventnotification/secrets.ini
@@ -5,3 +5,5 @@ ZMES_PICTURE_URL=https://portal/zm/index.php?view=image&eid=EVENTID&fid=objdetec
 ZM_USER=user
 ZM_PASSWORD=password
 ZM_PORTAL=https://portal/zm
+ES_CERT_FILE = /etc/apache2/ssl/zoneminder.crt
+ES_KEY_FILE = /etc/apache2/ssl/zoneminder.key
