Update to zmeventnotification 5.4.

--- a/zmeventnotification/objectconfig.ini
+++ b/zmeventnotification/objectconfig.ini
@@ -8,19 +8,25 @@
 # This is an optional file
 # If specified, you can specify tokens with secret values in that file
 # and onlt refer to the tokens in your main config file
-secrets=/etc/zm/secrets.ini
+secrets = /etc/zm/secrets.ini
 
+# portal/user/password are needed if you plan on using ZM's legacy
+# auth mechanism to get images
 portal=!ZM_PORTAL
 user=!ZM_USER
 password=!ZM_PASSWORD
+
+# api portal is needed if you plan to use tokens to get images
+# requires ZM 1.33 or above
+api_portal=!ZM_API_PORTAL
+
 allow_self_signed=yes
 # if yes, last detection will be stored for monitors
 # and bounding boxes that match, along with labels
 # will be discarded for new detections. This may be helpful
 # in getting rid of static objects that get detected
 # due to some motion. 
-#match_past_detections=yes
-match_past_detections=no
+match_past_detections=yes
 # The max difference in area between the objects if match_past_detection is on
 # can also be specified in px like 300px. Default is 5%. Basically, bounding boxes of the same
 # object can slightly differ ever so slightly between detection. Contributor @neillbell put in this PR
@@ -37,9 +43,9 @@ detection_mode=all
 #basic_user=user
 #basic_password=password
 
-# path to store downloaded images
-# needs to be RW www-data/apache
-image_path=/var/lib/zmeventnotification/images
+# base data path for various files the ES+OD needs
+# we support in config variable substitution as well
+base_data_path=/var/lib/zmeventnotification
 
 # this is the global detection pattern used for all monitors.
 # choose any set of classes from here https://github.com/pjreddie/darknet/blob/master/data/coco.names
@@ -73,7 +79,7 @@ write_image_to_zm=yes
 
 # Adds percentage to detections
 # hog/face shows 100% always
-show_percent=no
+show_percent=yes
 
 # color to be used to draw the polygons you specified
 poly_color=(255,255,255)
@@ -96,8 +102,12 @@ poly_color=(255,255,255)
 
 [monitor-8]
 # my driveway
+match_past_detections=no
+wait=5
 detect_pattern=(person|car|motorbike|bus|truck|boat)
-delete_after_analyze=no
+
+#alpr_pattern=^(.*x11)
+#delete_after_analyze=no
 #detect_pattern=.*
 #import_zm_zones=yes
 my_driveway_perimeter=306,356 1003,341 1074,683 154,715
@@ -138,7 +148,8 @@ models=yolo,face
 
 [monitor-6]
 # deck
-detect_pattern=^(?!chair|table|bench|bird)
+detect_pattern=^(?!chair|table|bench|bird|bicycle|frisbee)
+#detect_pattern=^(?!chair|table|bench|bird)
 models=yolo
 #yolo_type=tiny
 boundary=100,100 2988,10 2988,2220 10,2220
@@ -146,6 +157,7 @@ boundary=100,100 2988,10 2988,2220 10,2220
 [monitor-2]
 #doorbell
 detect_pattern=(person)
+#detect_pattern=.*
 # try face, if it works, don't do yolo
 detection_mode=first
 models=face,yolo
@@ -155,6 +167,10 @@ frame_id=bestmatch
 # My doorbell camera needs more accurate face detection
 # cnn did a much better job than HOG, but its _much_ slower
 face_model=cnn
+face_train_model=cnn
+face_recog_dist_threshold=0.6
+match_past_detections=no
+
 
 #if you hard code a frame, you need to make sure it is created
 #before we acess it. wait (sec) helps
@@ -171,19 +187,37 @@ face_model=cnn
 # [monitor-7]
 # entrance_door=313,221 392,210 418,592 367,659
 
+# Machine learning options that are not specific to a model
+[ml]
+# You can now run the machine learning code on a different server
+# This frees up your ZM server for other things
+# To do this, you need to setup https://github.com/pliablepixels/mlapi
+# on your desired server and confiure it with a user. See its instructions
+# once set up, you can choose to do object/face recognition via that 
+# external serer
+
+# URL that will be used
+#ml_gateway=http://192.168.1.21:5000/api/v1
+# API/password for remote gateway
+ml_user=!ML_USER
+ml_password=!ML_PASSWORD
+
+
 # config files for yolo
 [yolo]
 yolo_type=full
 #yolo_type=tiny
-yolo_min_confidence=0.5
 
-config=/var/lib/zmeventnotification/models/yolov3/yolov3.cfg
-weights=/var/lib/zmeventnotification/models/yolov3/yolov3.weights
-labels=/var/lib/zmeventnotification/models/yolov3/yolov3_classes.txt
+#yolo_min_confidence=0.5
+yolo_min_confidence=0.3
 
-tiny_config=/var/lib/zmeventnotification/models/tinyyolo/yolov3-tiny.cfg
-tiny_weights=/var/lib/zmeventnotification/models/tinyyolo/yolov3-tiny.weights
-tiny_labels=/var/lib/zmeventnotification/models/tinyyolo/yolov3-tiny.txt
+config={{base_data_path}}/models/yolov3/yolov3.cfg
+weights={{base_data_path}}/models/yolov3/yolov3.weights
+labels={{base_data_path}}/models/yolov3/yolov3_classes.txt
+
+tiny_config={{base_data_path}}/models/tinyyolo/yolov3-tiny.cfg
+tiny_weights={{base_data_path}}/models/tinyyolo/yolov3-tiny.weights
+tiny_labels={{base_data_path}}/models/tinyyolo/yolov3-tiny.txt
 
 # config params for HOG
 [hog]
@@ -193,7 +227,7 @@ scale=1.05
 mean_shift=-1
 
 [face]
-known_images_path=/var/lib/zmeventnotification/known_faces
+known_images_path={{base_data_path}}/known_faces
 
 # read https://github.com/ageitgey/face_recognition/wiki/Face-Recognition-Accuracy-Problems
 # read https://github.com/ageitgey/face_recognition#automatically-find-all-the-faces-in-an-image
@@ -202,24 +236,22 @@ known_images_path=/var/lib/zmeventnotification/known_faces
 # quick overview: 
 # num_jitters is how many times to distort images 
 # upsample_times is how many times to upsample input images (for small faces, for example)
-# model can be hog or cnn. cnn will more accurate, but much slower
+# model can be hog or cnn. cnn may be more accurate, but I haven't found it to be 
+
 face_num_jitters=1
 face_model=hog
 face_upsample_times=1
 
 # This is maximum distance of the face under test to the closest matched
 # face cluster. The larger this distance, larger the chances of misclassification.
-# 
+#
 face_recog_dist_threshold=0.6
-
 # When we are first training the face recognition model with known faces,
 # by default we use hog because we assume you will supply well lit, front facing faces
-# However, if you are planning to train with profile photos or hard to see faces, you 
+# However, if you are planning to train with profile photos or hard to see faces, you
 # may want to change this to cnn. Note that this increases training time, but training only
 # happens once, unless you retrain again by removing the training model
-
 face_train_model=hog
-
 #if a face doesn't match known names, we will detect it as 'unknown face'
 # you can change that to something that suits your personality better ;-)
 #unknown_face_name=invader
@@ -233,11 +265,7 @@ alpr_service=plate_recognizer
 # If you want to host a local SDK https://app.platerecognizer.com/sdk/
 #alpr_url=https://localhost:8080
 # Plate recog replace with your api key
-alpr_key=KEY
-
-# same logic as detect_pattern. But only applied to ALPR plates
-alpr_pattern=.*
-
+alpr_key=!PLATEREC_ALPR_KEY
 # if yes, then it will log usage statistics of the ALPR service
 platerec_stats=no
 # If you want to specify regions. See http://docs.platerecognizer.com/#regions-supported
@@ -248,10 +276,9 @@ platerec_min_dscore=0.1
 platerec_min_score=0.2
 
 
-
 # ----| If you are using openALPR |-----
 #alpr_service=open_alpr
-#alpr_key=SECRET
+#alpr_key=!OPENALPR_ALPR_KEY
 
 # For an explanation of params, see http://doc.openalpr.com/api/?api=cloudapi
 #openalpr_recognize_vehicle=1
