--- a/zmeventnotification/secrets.ini
+++ b/zmeventnotification/secrets.ini
@@ -5,5 +5,10 @@ ZMES_PICTURE_URL=https://portal/zm/index.php?view=image&eid=EVENTID&fid=objdetec
 ZM_USER=user
 ZM_PASSWORD=password
 ZM_PORTAL=https://portal/zm
+ZM_API_PORTAL=https://portal/zm/api
 ES_CERT_FILE = /etc/apache2/ssl/zoneminder.crt
 ES_KEY_FILE = /etc/apache2/ssl/zoneminder.key
+ML_USER=your_mlapi_user
+ML_PASSWORD=your_mlapi_password
+PLATEREC_ALPR_KEY=your_plate_recognizer_api_key
+OPENALPR_ALPR_KEY=your_openalpr_api_key
