Update to Zoneminder 1.34.

--- a/defaults/default-ssl.conf
+++ b/defaults/default-ssl.conf
@@ -23,6 +23,9 @@
 		#   SSL Engine Switch:
 		#   Enable/Disable SSL for this virtual host.
 		SSLEngine on
+		
+		#   Disable all protocols except for TLSv1.2.  Other protocols are obsolete.
+		SSLProtocol -all +TLSv1.2
 
 		#   A self-signed (snakeoil) certificate can be created by installing
 		#   the ssl-cert package. See
@@ -66,8 +69,8 @@
 		#   none, optional, require and optional_no_ca.  Depth is a
 		#   number which specifies how deeply to verify the certificate
 		#   issuer chain before deciding the certificate is not valid.
-		#SSLVerifyClient require
-		#SSLVerifyDepth  10
+		SSLVerifyClient optional_no_ca
+		SSLVerifyDepth  10
 
 		#   SSL Engine Options:
 		#   Set various options for the SSL engine.
