--- a/zmeventnotification/secrets.ini
+++ b/zmeventnotification/secrets.ini
@@ -4,6 +4,8 @@ ZMES_PICTURE_URL=https://portal/zm/index.php?view=image&eid=EVENTID&fid=objdetec
 #ZMES_PICTURE_URL=https://portal/zm/index.php?view=image&eid=EVENTID&fid=snapshot&width=600
 ZM_USER=user
 ZM_PASSWORD=password
+ES_ADMIN_INTERFACE_PASSWORD=your_admin_ininterface_password
+
 ZM_PORTAL=https://portal/zm
 ZM_API_PORTAL=https://portal/zm/api
 ES_CERT_FILE = /etc/apache2/ssl/zoneminder.crt
@@ -12,3 +14,5 @@ ML_USER=your_mlapi_user
 ML_PASSWORD=your_mlapi_password
 PLATEREC_ALPR_KEY=your_plate_recognizer_api_key
 OPENALPR_ALPR_KEY=your_openalpr_api_key
+
+ESCONTROL_INTERFACE_PASSWORD=yourescontrolpassword
