--- a/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification.ini
@@ -4,6 +4,19 @@
 secrets = /etc/zm/secrets.ini
 base_data_path=/var/lib/zmeventnotification
 
+# The ES now supports a means for a special kind of 
+# websocket connection which can dynamically control ES
+# behaviour 
+# Default is no
+use_escontrol_interface=no
+
+# this is where all escontrol admin overrides
+# will be stored.
+escontrol_interface_file=/var/lib/zmeventnotification/misc/escontrol_interface.dat
+
+# the password for accepting control interfaces
+escontrol_interface_password=!ESCONTROL_INTERFACE_PASSWORD
+
 # If you see the ES getting 'stuck' after several hours
 # see https://rt.cpan.org/Public/Bug/Display.html?id=131058
 # You can use restart_interval to have it automatically restart
@@ -33,6 +46,14 @@ enable = yes
 # Auth token store location (default: /var/lib/zmeventnotification/push/tokens.txt).
 token_file = {{base_data_path}}/push/tokens.txt
 
+# Date format to use when sending notification
+# over push (FCM)
+# See https://metacpan.org/pod/POSIX::strftime::GNU
+# For example, a 24 hr format would be
+#date_format = %H:%M, %d-%b
+
+date_format = %I:%M %p, %d-%b
+
 # Use MQTT for messaging (default: no)
 [mqtt]
 enable = no
@@ -45,6 +66,11 @@ server = 127.0.0.1
 
 # Password 
 # password =  
+
+# Some MQTT brokers don't seem to honor
+# keep alives resulting in missed notifications
+# default:no
+close_on_send = no
 
 
 [ssl]
