Update ES to 5.7.4; Add opencv.sh script.

--- a/zmeventnotification/objectconfig.ini
+++ b/zmeventnotification/objectconfig.ini
@@ -189,6 +189,20 @@ match_past_detections=no
 
 # Machine learning options that are not specific to a model
 [ml]
+
+# Starting version 4.2 of OpenCV, the DNN models support CUDA
+# If you have compiled OpenCV 4.2 with CUDA support correctly
+# set this to yes. Note that if you have just installed a package
+# chances are it is not properly set up with CUDA. It is much better
+# you compile OpenCV from source (and uninstall any opencv packages you
+# installed via pip or apt-get)
+# Read https://www.pyimagesearch.com/2020/02/03/how-to-use-opencvs-dnn-module-with-nvidia-gpus-cuda-and-cudnn/ on how to do it right.
+# Play special attention to putting in the right CUDA_ARCH_BIN value that
+# matches your GPU or you'll face "invalid device errors in make_policy"
+# while trying to actually run it (compile will work fine)
+
+#use_opencv_dnn_cuda=yes
+
 # You can now run the machine learning code on a different server
 # This frees up your ZM server for other things
 # To do this, you need to setup https://github.com/pliablepixels/mlapi
