Update to ES 5.7.7

--- a/zmeventnotification/zmeventnotification/objectconfig.ini
+++ b/zmeventnotification/zmeventnotification/objectconfig.ini
@@ -293,10 +293,13 @@ face_train_model=hog
 
 [alpr]
 
+# keep this to yes. no mode is not supported today
 alpr_use_after_detection_only=yes
 
-# -----| If you are using plate recognizer | ------
+
+# plate_recognizer, open_alpr, open_alpr_cmdline
 alpr_service=plate_recognizer
+
 # If you want to host a local SDK https://app.platerecognizer.com/sdk/
 #alpr_url=https://localhost:8080
 # Plate recog replace with your api key
@@ -311,7 +314,7 @@ platerec_min_dscore=0.1
 platerec_min_score=0.2
 
 
-# ----| If you are using openALPR |-----
+# ----| If you are using openALPR web service |-----
 #alpr_service=open_alpr
 #alpr_key=!OPENALPR_ALPR_KEY
 
@@ -321,4 +324,29 @@ platerec_min_score=0.2
 #openalpr_state=ca
 # openalpr returns percents, but we convert to between 0 and 1
 #openalpr_min_confidence=0.3
+
+
+# ----| If you are using openALPR command line |-----
+
+# Before you do any of this, make sure you have openALPR
+# compiled and working properly as per http://doc.openalpr.com/compiling.html
+# the alpr binary needs to be operational and capable of detecting plates
+
+# Note this is not really very accurate unless you 
+# have a camera directly with a good view of the palates
+# the cloud based API service is far more accurate
+
+#openalpr_cmdline_binary=alpr
+
+# Do an alpr -help to see options, plug them in here
+# like say '-j -p ca -c US' etc.
+# keep the -j because its JSON
+
+# Note that alpr_pattern is honored
+# For the rest, just stuff them in the cmd line options
+
+#openalpr_cmdline_params=-j
+#openalpr_cmdline_min_confidence=0.3
+
+
 
