--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,8 @@ services:
             - INSTALL_FACE=0
             - INSTALL_TINY_YOLO=0
             - INSTALL_YOLO=0
+			- MULTI_PORT_START=0
+			- MULTI_PORT_END=0
         volumes:
             - config:/config:rw 
             - data:/var/cache/zoneminder:rw 
