--- a/zmeventnotification/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification/zmeventnotification.ini
@@ -35,6 +35,25 @@ enable = yes
 # Authentication timeout, in seconds (default: 20).
 timeout = 20
 
+[push]
+# This is to enable sending push notifications via any 3rd party service. 
+# Typically, if you enable this, you might want to turn off fcm
+# Note that zmNinja will only receive notifications via FCM, but other 3rd
+# party services have their own apps to get notifications
+use_api_push = no
+
+# This is the script that will send the notification
+# Some sample scripts are provided, write your own
+# Each script gets:
+# arg1 - event ID
+# arg2 - Monitor ID
+# arg3 - Monitor Name
+# arg4 - alarm cause
+# arg5 - Type of event (event_start or event_end)
+# arg6 (optional) - image path 
+
+api_push_script=/var/lib/zmeventnotification/bin/pushapi_pushover.py
+
 [fcm]
 # Use FCM for messaging (default: yes).
 enable = yes
@@ -62,10 +81,10 @@ enable = no
 server = 127.0.0.1
 
 # Authenticate to MQTT server as user
-# username = 
+# username = !MQTT_USERNAME
 
 # Password 
-# password =  
+# password = !MQTT_PASSWORD
 
 # Some MQTT brokers don't seem to honor
 # keep alives resulting in missed notifications
@@ -79,6 +98,15 @@ enable = yes
 
 cert = !ES_CERT_FILE
 key = !ES_KEY_FILE
+
+#cert = /etc/apache2/ssl/zoneminder.crt
+#key = /etc/apache2/ssl/zoneminder.key
+
+# Location to SSL cert (no default).
+# cert = /etc/apache2/ssl/yourportal/zoneminder.crt
+
+# Location to SSL key (no default).
+# key = /etc/apache2/ssl/yourportal/zoneminder.key
 
 [customize]
 # Display messages to console (default: no).
@@ -156,8 +184,8 @@ event_start_hook = '{{base_data_path}}/bin/zm_event_start.sh'
 event_end_hook = '{{base_data_path}}/bin/zm_event_end.sh'
 
 
-# Possible channels = web,fcm,mqtt
-# all is short for web,fcm,mqtt
+# Possible channels = web,fcm,mqtt,api
+# all is short for web,fcm,mqtt,api
 # use none for no notifications, or comment out the attribute 
 
 # When an event starts and hook returns 0, send notification to all. Default: none
@@ -166,8 +194,8 @@ event_start_notify_on_hook_success = all
 # When an event starts and hook returns 1, send notification only to desktop. Default: none
 event_start_notify_on_hook_fail = none
 
-# When an event ends and hook returns 0, send notification to fcm and web. Default: none
-event_end_notify_on_hook_success = fcm,web
+# When an event ends and hook returns 0, send notification to fcm,web,api. Default: none
+event_end_notify_on_hook_success = fcm,web,api
 
 # When an event ends and hook returns 1, don't send notifications. Default: none
 event_end_notify_on_hook_fail = none
@@ -202,3 +230,5 @@ keep_frame_match_type = yes
 # Note: you also need to set write_image_to_zm=yes in objectconfig.ini
 # default: no
 hook_pass_image_path = yes
+
+
