Update to zmeventserver 5.11.3.

--- a/zmeventnotification/zmeventnotification/secrets.ini
+++ b/zmeventnotification/zmeventnotification/secrets.ini
@@ -1,6 +1,13 @@
 # your secrets file
 [secrets]
+
+# fid can have the following values:
+# a particular <frameid>, alarm or snapshot
+# starting ZM 1.35, you can also specify
+# objdetect_mp4, objdetect_gif or objdetect_image
+# this needs create_animation enabled in objectconfig.ini and associated flags
 ZMES_PICTURE_URL=https://portal/zm/index.php?view=image&eid=EVENTID&fid=objdetect&width=600
+
 #ZMES_PICTURE_URL=https://portal/zm/index.php?view=image&eid=EVENTID&fid=snapshot&width=600
 ZM_USER=user
 ZM_PASSWORD=password
