--- a/zmeventnotification/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification/zmeventnotification.ini
@@ -24,6 +24,13 @@ escontrol_interface_password=!ESCONTROL_INTERFACE_PASSWORD
 # restart_interval = 432000
 restart_interval = 0
 
+# list of monitors which ES will ignore
+# Note that there is an attribute later that does
+# not process hooks for specific monitors. This one is different
+# It can be used to completely skip ES processing for the 
+# monitors defined
+# skip_monitors = 2,3,4
+
 [network]
 # Port for Websockets connection (default: 9000).
 port = 9000
@@ -147,6 +154,8 @@ send_event_end_notification = no
 
 # BESTMATCH should be used only if you are using bestmatch for FID in detect_wrapper.sh
 # objdetect is ONLY available in ZM 1.33+
+# objdetect_mp4 and objdetect_gif is ONLY available
+# in ZM 1.35+
 picture_url = !ZMES_PICTURE_URL
 picture_portal_username=!ZM_USER
 picture_portal_password=!ZM_PASSWORD
@@ -220,7 +229,7 @@ use_hook_description = yes
 keep_frame_match_type = yes
 
 # list of monitors for which hooks will not run
-# skip_monitors = 2
+# hook_skip_monitors = 2
 
 
 # if enabled, will pass the right folder for the hook script
