--- a/zmeventnotification/zmeventnotification/objectconfig.ini
+++ b/zmeventnotification/zmeventnotification/objectconfig.ini
@@ -19,9 +19,9 @@ base_data_path=/var/lib/zmeventnotification
 # ZM conventions on install paths. This may cause 
 # problems with pyzm that the hooks use to do logging
 # Look at https://pyzm.readthedocs.io/en/latest/source/pyzm.html#pyzm.ZMLog.init for parameters. Default is "{}"
-
-
+# You can also use this to control logging irrespective of ZM log settings
 #pyzm_overrides = {'conf_path':'/etc/zm'}
+pyzm_overrides={'log_level_debug':2}
 
 # base path where ZM config files reside
 # this is needed by pyzm especially if your paths are different
