--- a/zmeventnotification/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification/zmeventnotification.ini
@@ -93,10 +93,8 @@ server = 127.0.0.1
 # Password 
 # password = !MQTT_PASSWORD
 
-# Some MQTT brokers don't seem to honor
-# keep alives resulting in missed notifications
-# default:no
-close_on_send = no
+# Set retain flag on MQTT messages (default: no)
+retain = no
 
 
 [ssl]
@@ -118,6 +116,10 @@ key = !ES_KEY_FILE
 [customize]
 # Display messages to console (default: no).
 console_logs = no
+# debug level for ES messages. Default 2. Note that this is
+# not controllable by ZM LOG_DEBUG_LEVEL as in Perl, ZM doesn't
+# support debug levels
+es_debug_level = 2
 
 # Interval, in seconds, after which we will check for new events (default: 5).
 event_check_interval = 5
@@ -135,7 +137,7 @@ tag_alarm_event_id = yes
 # Use custom notification sound (default: no).
 use_custom_notification_sound = no
 
-# include picture in alarm (Android only) (default: no).
+# include picture in alarm (default: no).
 include_picture = yes
 
 # send event end notifications (default: no)
@@ -185,7 +187,7 @@ use_hooks = no
 event_start_hook = '{{base_data_path}}/bin/zm_event_start.sh'
 
 
-# This script is called when an event first starts. If the script returns "0"
+# This script is called when an event ends. If the script returns "0"
 # (success), then a notification is sent to channels specified in 
 # event_end_notify_on_hook_success. If the script returns "1" (fail)
 # then a notification is sent to channels specified in 
