Update to ES 5.15.5; add pushover api file.

--- a/zmeventnotification/zmeventnotification/objectconfig.ini
+++ b/zmeventnotification/zmeventnotification/objectconfig.ini
@@ -111,6 +111,14 @@ poly_color=(255,255,255)
 # If yes, will import zones automatically from monitors
 #import_zm_zones=no
 
+# If yes, will match object detections only in areas
+# that ZM recorded motion. Note that the ES will only know
+# the initial zones motion was triggered in before an alarm 
+# was raised. If ZM adds more zones later in the course of the event,
+# the ES will NOT know
+
+#only_triggered_zm_zones=no
+
 # This section gives you an option to get brief animations 
 # of the event, delivered as part of the push notification to mobile devices
 # Animations are created only if an object is detected
@@ -138,7 +146,13 @@ create_animation=no
 # with push notifications may look transparent. My guess
 # is this is related to how the video is being formed
 # in ZM as it is a partial video when we process it
-animation_types='mp4'
+
+# Note that if you use mp4, you need to change the picture_url
+# in zmeventnotification.ini to objdetect_mp4. When you use objdetect,
+# a GIF file is checked and if not, the image is returned. MP4 is not
+# returned, as they are not playable inside an HTML img tag
+
+animation_types='gif'
 
 # default width of animation image. Be cautious when you increase this
 # most mobile platforms give a very brief amount of time (in seconds) 
@@ -301,10 +315,18 @@ yolo_type=full
 #yolo_min_confidence=0.5
 yolo_min_confidence=0.3
 
+# For Yolo full
 config={{base_data_path}}/models/yolov3/yolov3.cfg
 weights={{base_data_path}}/models/yolov3/yolov3.weights
 labels={{base_data_path}}/models/yolov3/yolov3_classes.txt
 
+# FOR CSPN. Note that model name is yolo
+#config={{base_data_path}}/models/cspn/csresnext50-panet-spp-original-optimal.cfg
+#weights={{base_data_path}}/models/cspn/csresnext50-panet-spp-original-optimal_final.weights
+#labels={{base_data_path}}/models/cspn/coco.names
+
+
+# For tiny Yolo
 tiny_config={{base_data_path}}/models/tinyyolo/yolov3-tiny.cfg
 tiny_weights={{base_data_path}}/models/tinyyolo/yolov3-tiny.weights
 tiny_labels={{base_data_path}}/models/tinyyolo/yolov3-tiny.txt
