--- a/zmeventnotification/zmeventnotification/secrets.ini
+++ b/zmeventnotification/zmeventnotification/secrets.ini
@@ -6,6 +6,11 @@
 # starting ZM 1.35, you can also specify
 # objdetect_mp4, objdetect_gif or objdetect_image
 # this needs create_animation enabled in objectconfig.ini and associated flags
+# If you keep it to objdetect, if you created a GIF file in objectconfig, then
+# a GIF file will be used else an image. If you opted for MP4 in objectconfig,
+# you need to change this to objdetect_mp4
+
+# Note that on Android, mp4/gif does not work. iOS only.
 ZMES_PICTURE_URL=https://portal/zm/index.php?view=image&eid=EVENTID&fid=objdetect&width=600
 
 #ZMES_PICTURE_URL=https://portal/zm/index.php?view=image&eid=EVENTID&fid=snapshot&width=600
