--- a/zmeventnotification/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification/zmeventnotification.ini
@@ -83,6 +83,9 @@ date_format = %I:%M %p, %d-%b
 # Use MQTT for messaging (default: no)
 [mqtt]
 enable = no
+# Allow you to set a custom MQTT topic name
+# default: zoneminder
+#topic = my topic name
 
 # MQTT server (default: 127.0.0.1)
 server = 127.0.0.1
@@ -186,6 +189,10 @@ use_hooks = no
 # event_start_notify_on_hook_fail
 event_start_hook = '{{base_data_path}}/bin/zm_event_start.sh'
 
+#This script is called after event_start_hook completes. You can do 
+# your housekeeping work here
+#event_start_hook_notify_userscript = '{{base_data_path}}/contrib/example.py'
+
 
 # This script is called when an event ends. If the script returns "0"
 # (success), then a notification is sent to channels specified in 
@@ -193,6 +200,10 @@ event_start_hook = '{{base_data_path}}/bin/zm_event_start.sh'
 # then a notification is sent to channels specified in 
 # event_end_notify_on_hook_fail
 event_end_hook = '{{base_data_path}}/bin/zm_event_end.sh'
+
+#This script is called after event_start_hook completes. You can do 
+# your housekeeping work here
+#event_start_hook_notify_userscript = '{{base_data_path}}/contrib/example.py'
 
 
 # Possible channels = web,fcm,mqtt,api
