Update ES to 5.15.6.

--- a/zmeventnotification/zmeventnotification/objectconfig.ini
+++ b/zmeventnotification/zmeventnotification/objectconfig.ini
@@ -315,18 +315,18 @@ yolo_type=full
 #yolo_min_confidence=0.5
 yolo_min_confidence=0.3
 
-# For Yolo full
+# For YoloV3 full
 config={{base_data_path}}/models/yolov3/yolov3.cfg
 weights={{base_data_path}}/models/yolov3/yolov3.weights
-labels={{base_data_path}}/models/yolov3/yolov3_classes.txt
+labels={{base_data_path}}/models/yolov3/coco.names
 
-# FOR CSPN. Note that model name is yolo
-#config={{base_data_path}}/models/cspn/csresnext50-panet-spp-original-optimal.cfg
-#weights={{base_data_path}}/models/cspn/csresnext50-panet-spp-original-optimal_final.weights
-#labels={{base_data_path}}/models/cspn/coco.names
+# FOR YoloV4. Note that model name is yolo
+#config={{base_data_path}}/models/yolov4/yolov4.cfg
+#weights={{base_data_path}}/models/yolov4/yolov4.weights
+#labels={{base_data_path}}/models/yolov4/coco.names
 
 
-# For tiny Yolo
+# For tiny Yolo V3
 tiny_config={{base_data_path}}/models/tinyyolo/yolov3-tiny.cfg
 tiny_weights={{base_data_path}}/models/tinyyolo/yolov3-tiny.weights
 tiny_labels={{base_data_path}}/models/tinyyolo/yolov3-tiny.txt
