Upgrade ES to 6.0.4.

--- a/zmeventnotification/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification/zmeventnotification.ini
@@ -65,6 +65,9 @@ api_push_script=/var/lib/zmeventnotification/bin/pushapi_pushover.py
 # Use FCM for messaging (default: yes).
 enable = yes
 
+# Use the new FCM V1 protocol (recommended)
+use_fcmv1 = yes
+
 # Custom FCM API key. Uncomment if you are using
 # your own API key (most people will not need to uncomment)
 # api_key =
@@ -99,6 +102,19 @@ server = 127.0.0.1
 # Set retain flag on MQTT messages (default: no)
 retain = no
 
+# MQTT over TLS
+# Location to MQTT broker CA certificate. Uncomment this line will enable MQTT over TLS.
+# tls_ca = /config/certs/ca.pem
+
+# To enable 2-ways TLS, add client certificate and private key
+# Location to client certificate and private key
+# tls_cert = /config/es-pub.pem
+# tls_key = /config/es-key.pem
+
+# To allow insecure TLS (disable peer verifier), (default: no)
+# tls_insecure = yes
+
+
 
 [ssl]
 # Enable SSL (default: yes)
@@ -117,6 +133,8 @@ key = !ES_KEY_FILE
 # key = /etc/apache2/ssl/yourportal/zoneminder.key
 
 [customize]
+# Link to json file that has rules which can be customized
+# es_rules=/var/lib/zmeventnotification/es_rules.json
 # Display messages to console (default: no).
 console_logs = no
 # debug level for ES messages. Default 2. Note that this is
@@ -201,9 +219,9 @@ event_start_hook = '{{base_data_path}}/bin/zm_event_start.sh'
 # event_end_notify_on_hook_fail
 event_end_hook = '{{base_data_path}}/bin/zm_event_end.sh'
 
-#This script is called after event_start_hook completes. You can do 
+#This script is called after event_end_hook completes. You can do 
 # your housekeeping work here
-#event_start_hook_notify_userscript = '{{base_data_path}}/contrib/example.py'
+#event_end_hook_notify_userscript = '{{base_data_path}}/contrib/example.py'
 
 
 # Possible channels = web,fcm,mqtt,api
