--- a/zmeventnotification/zmeventnotification/objectconfig.ini
+++ b/zmeventnotification/zmeventnotification/objectconfig.ini
@@ -5,11 +5,29 @@
 # duplicate it inside the correct [monitor-<num>] section
 
 [general]
+
+# Please don't change this. It is used by the config upgrade script
+version=1.0
+
 # This is an optional file
 # If specified, you can specify tokens with secret values in that file
 # and onlt refer to the tokens in your main config file
 secrets = /etc/zm/secrets.ini
 
+
+# You can now limit the # of detection process
+# per target processor. If not specified, default is 1
+# Other detection processes will wait to acquire lock
+
+cpu_max_processes=3
+tpu_max_processes=1
+gpu_max_processes=1
+
+# NEW: Time to wait in seconds per processor to be free, before
+# erroring out. Default is 120 (2 mins)
+cpu_max_lock_wait=120
+tpu_max_lock_wait=120
+gpu_max_lock_wait=120
 
 # base data path for various files the ES+OD needs
 # we support in config variable substitution as well
@@ -39,12 +57,22 @@ password=!ZM_PASSWORD
 api_portal=!ZM_API_PORTAL
 
 allow_self_signed=yes
+
+# If specified, will limit detected object size to this amount of
+# the total image size passed. Can help avoiding weird detections
+# You can specify as % or px. Default is px
+# Remember the image is resized to 416x416 internally. better
+# to keep in %
+#max_detection_size=95%
+
+
 # if yes, last detection will be stored for monitors
 # and bounding boxes that match, along with labels
 # will be discarded for new detections. This may be helpful
 # in getting rid of static objects that get detected
 # due to some motion. 
 match_past_detections=yes
+
 # The max difference in area between the objects if match_past_detection is on
 # can also be specified in px like 300px. Default is 5%. Basically, bounding boxes of the same
 # object can slightly differ ever so slightly between detection. Contributor @neillbell put in this PR
@@ -52,8 +80,8 @@ match_past_detections=yes
 past_det_max_diff_area=5%
 
 # sequence of models to run for detection
+detection_sequence=object,face
 
-models=yolo,face
 # if all, then we will loop through all models
 # if first then the first success will break out
 detection_mode=all
@@ -63,23 +91,16 @@ detection_mode=all
 #basic_password=password
 
 
-
-# this is the global detection pattern used for all monitors.
-# choose any set of classes from here https://github.com/pjreddie/darknet/blob/master/data/coco.names
-# for everything, make it .*
-detect_pattern=(person|car|motorbike|bus|truck|boat)
-#detect_pattern=.*
-
 # global settings for 
 # bestmatch, alarm, snapshot OR a specific frame ID
 frame_id=bestmatch
 
 # Typically best match means it will first try alarm 
 # and then snapshot. If you want it the reverse way, 
-# make the order 's,a'. Don't get imaginative here -
-# 's,a' is the only thing it understands. Everything else
+# make the order s,a. Don't get imaginative here -
+# s,a is the only thing it understands. Everything else
 # means alarm then snapshot.
-#bestmatch_order = 's,a'
+#bestmatch_order = s,a
 
 # this is the to resize the image before analysis is done
 resize=1200
@@ -107,6 +128,8 @@ show_percent=yes
 
 # color to be used to draw the polygons you specified
 poly_color=(255,255,255)
+# Make this 0 if you don't want to see polygons
+poly_thickness=2
 
 # If yes, will import zones automatically from monitors
 #import_zm_zones=no
@@ -119,172 +142,8 @@ poly_color=(255,255,255)
 
 #only_triggered_zm_zones=no
 
-# This section gives you an option to get brief animations 
-# of the event, delivered as part of the push notification to mobile devices
-# Animations are created only if an object is detected
 
-[animation]
-# Seems like GIF/MP4 animations only
-# work in IOS. Too bad.
-
-# NOTE: Animation ONLY works with ZM 1.35 master as of Mar 16, 2020
-# You also require zmNinja 1.3.91 or above
-# If you are not running that version, animation will not work
-# Animation frames will be created, but they won't be pushed to your device
-
-# If yes, object detection will attempt to create 
-# a short GIF file around the object detection frame
-# that can be sent via push notifications for instant playback
-# Note this required additional software support. Default:no
-create_animation=no
-
-# Format of animation burst
-# valid options are "mp4", "gif", "mp4,gif"
-# Note that gifs will be of a shorter duration
-# as they take up much more disk space than mp4
-# Note that if you use mp4, the thumbnail that shows 
-# with push notifications may look transparent. My guess
-# is this is related to how the video is being formed
-# in ZM as it is a partial video when we process it
-
-# Note that if you use mp4, you need to change the picture_url
-# in zmeventnotification.ini to objdetect_mp4. When you use objdetect,
-# a GIF file is checked and if not, the image is returned. MP4 is not
-# returned, as they are not playable inside an HTML img tag
-
-animation_types='gif'
-
-# default width of animation image. Be cautious when you increase this
-# most mobile platforms give a very brief amount of time (in seconds) 
-# to download the image.
-# Given your ZM instance will be serving the image, it will anyway be slow
-# Making the total animation size bigger resulted in the notification not 
-# getting an image at all (timed out)
-animation_width=640
-
-# animation_retry_sleep refers to how long to wait before trying to grab
-# frame information if it failed. animation_max_tries defines how many times it 
-# will try and retrieve frames before it gives up
-animation_retry_sleep=15
-animation_max_tries=3
-
-
-## Monitor specific settings
-#
-# - Format:  [monitor-<mid>]
-#
-# Parameters:
-# polygon areas where object detection will be done.
-# You can name them anything except the keywords defined in the optional
-# params below. You can put as many polygons as you want per [monitor-<mid>]
-# (see examples).
-#
-# detect_pattern: overrides the detection patterns used for this monitor.
-#
-# Examples:
-
-[monitor-8]
-# my driveway
-match_past_detections=no
-wait=5
-detect_pattern=(person|car|motorbike|bus|truck|boat)
-
-#alpr_pattern=^(.*x11)
-#delete_after_analyze=no
-#detect_pattern=.*
-#import_zm_zones=yes
-my_driveway_perimeter=306,356 1003,341 1074,683 154,715
-# use license plate recognition for my driveway
-# see alpr section later for more data needed
-resize=no
-models=yolo,alpr
-# tiny switches to tiny yolo weights, instead of full Yolo. Much faster, but less accurate
-#yolo_type=tiny
-
-[monitor-10]
-# my front lawn
-# here we want anything except potted plant
-# exclusion in regular expressions is not
-# as straightforward as you may think, so 
-# follow this pattern
-# detect_pattern = ^(?!object1|object2|objectN)
-# the characters in front implement what is 
-# called a negative look ahead
-
-detect_pattern=^(?!potted plant|pottedplant|bench|broccoli)
-#detect_pattern=.*
-
-# local model overrides global
-models=yolo
-
-# setting import_zm_zones to yes will import ZM defined zones
-#import_zm_zones=yes
-
-[monitor-5]
-# my basement
-detect_pattern=(person)
-#detect_pattern=.*
-#poly_color=(255,0,0)
-#detect_pattern=^(?!chair|bed)
-param=219,304 1113,278 1066,863 177,852
-models=yolo,face
-
-[monitor-6]
-# deck
-detect_pattern=^(?!chair|table|bench|bird|bicycle|frisbee)
-#detect_pattern=^(?!chair|table|bench|bird)
-models=yolo
-#yolo_type=tiny
-boundary=100,100 2988,10 2988,2220 10,2220
-
-[monitor-2]
-#doorbell
-detect_pattern=(person)
-#detect_pattern=.*
-# try face, if it works, don't do yolo
-detection_mode=first
-models=face,yolo
-frame_id=bestmatch
-# try diff. sizes. In my case, 600 was enough
-#resize=600
-# My doorbell camera needs more accurate face detection
-# cnn did a much better job than HOG, but its _much_ slower
-face_model=cnn
-face_train_model=cnn
-face_recog_dist_threshold=0.6
-match_past_detections=no
-
-
-#if you hard code a frame, you need to make sure it is created
-#before we acess it. wait (sec) helps
-#frame_id=32
-#wait=3
-
-
-
-#[monitor-4]
-# detect_pattern=(cat|dog)
-# kitchen_door=313,221 392,210 418,592 367,659
-
-# No 'detect_pattern', global value would be used.
-# [monitor-7]
-# entrance_door=313,221 392,210 418,592 367,659
-
-# Machine learning options that are not specific to a model
-[ml]
-
-# Starting version 4.2 of OpenCV, the DNN models support CUDA
-# If you have compiled OpenCV 4.2 with CUDA support correctly
-# set this to yes. Note that if you have just installed a package
-# chances are it is not properly set up with CUDA. It is much better
-# you compile OpenCV from source (and uninstall any opencv packages you
-# installed via pip or apt-get)
-# Read https://www.pyimagesearch.com/2020/02/03/how-to-use-opencvs-dnn-module-with-nvidia-gpus-cuda-and-cudnn/ on how to do it right.
-# Play special attention to putting in the right CUDA_ARCH_BIN value that
-# matches your GPU or you'll face "invalid device errors in make_policy"
-# while trying to actually run it (compile will work fine)
-
-#use_opencv_dnn_cuda=yes
+[remote]
 
 # You can now run the machine learning code on a different server
 # This frees up your ZM server for other things
@@ -303,33 +162,59 @@ match_past_detections=no
 #ml_fallback_local=yes
 
 # API/password for remote gateway
-ml_user=!ML_USER
-ml_password=!ML_PASSWORD
+#ml_user=!ML_USER
+#ml_password=!ML_PASSWORD
+#ml_fallback_local=no
 
 
-# config files for yolo
-[yolo]
-yolo_type=full
-#yolo_type=tiny
+[object]
 
-#yolo_min_confidence=0.5
-yolo_min_confidence=0.3
+# this is the global detection pattern used for all monitors.
+# choose any set of classes from here https://github.com/pjreddie/darknet/blob/master/data/coco.names
+# for everything, make it .*
+object_detection_pattern=(person|car|motorbike|bus|truck|boat)
+#object_detection_pattern=.*
+
+object_min_confidence=0.3
+
+
+# For Google Coral Edge TPU
+#object_framework=coral_edgetpu
+#object_processor=tpu
+#object_weights={{base_data_path}}/models/coral_edgetpu/ssd_mobilenet_v2_coco_quant_postprocess_edgetpu.tflite
+#object_labels={{base_data_path}}/models/coral_edgetpu/coco_indexed.names
+
+
 
 # For YoloV3 full
-config={{base_data_path}}/models/yolov3/yolov3.cfg
-weights={{base_data_path}}/models/yolov3/yolov3.weights
-labels={{base_data_path}}/models/yolov3/coco.names
+object_framework=opencv
+object_processor=cpu # or gpu
+object_config={{base_data_path}}/models/yolov3/yolov3.cfg
+object_weights={{base_data_path}}/models/yolov3/yolov3.weights
+object_labels={{base_data_path}}/models/yolov3/coco.names
 
-# FOR YoloV4. Note that model name is yolo
-#config={{base_data_path}}/models/yolov4/yolov4.cfg
-#weights={{base_data_path}}/models/yolov4/yolov4.weights
-#labels={{base_data_path}}/models/yolov4/coco.names
+# FOR YoloV4. 
+#object_framework=opencv
+#object_processor=cpu # or gpu
+#object_config={{base_data_path}}/models/yolov4/yolov4.cfg
+#object_weights={{base_data_path}}/models/yolov4/yolov4.weights
+#object_labels={{base_data_path}}/models/yolov4/coco.names
 
 
 # For tiny Yolo V3
-tiny_config={{base_data_path}}/models/tinyyolo/yolov3-tiny.cfg
-tiny_weights={{base_data_path}}/models/tinyyolo/yolov3-tiny.weights
-tiny_labels={{base_data_path}}/models/tinyyolo/yolov3-tiny.txt
+#object_framework=opencv
+#object_processor=cpu #or gpu
+#object_config={{base_data_path}}/models/tinyyolov3/yolov3-tiny.cfg
+#object_weights={{base_data_path}}/models/tinyyolov3/yolov3-tiny.weights
+#object_labels={{base_data_path}}/models/tinyyolov3/coco.names
+
+# For tiny Yolo V4
+#object_framework=opencv
+#object_processor=cpu # or gpu
+#object_config={{base_data_path}}/models/tinyyolov4/yolov4-tiny.cfg
+#object_weights={{base_data_path}}/models/tinyyolov4/yolov4-tiny.weights
+#object_labels={{base_data_path}}/models/tinyyolov4/coco.names
+
 
 # config params for HOG
 [hog]
@@ -339,6 +224,19 @@ scale=1.05
 mean_shift=-1
 
 [face]
+
+# this is the global detection pattern used for all monitors.
+#face_detection_pattern=(Name1|Name2|Name3)
+
+
+# As of today, only dlib can be used
+# Coral TPU only supports face detection
+# Maybe in future, we can do different frameworks
+# for detection and recognition
+face_detection_framework=dlib
+face_recognition_framework=dlib
+
+
 # this directly will be where you store known images on a per directory basis
 known_images_path={{base_data_path}}/known_faces
 
@@ -383,6 +281,10 @@ face_train_model=hog
 #unknown_face_name=invader
 
 [alpr]
+
+
+# this is the global detection pattern used for all monitors.
+#alpr_detection_pattern=(licenseplate1|licenseplate2|licenseplate3)
 
 # keep this to yes. no mode is not supported today
 alpr_use_after_detection_only=yes
@@ -444,5 +346,106 @@ platerec_min_score=0.2
 #openalpr_cmdline_params=-j
 #openalpr_cmdline_min_confidence=0.3
 
+
+
+
+
+# This section gives you an option to get brief animations 
+# of the event, delivered as part of the push notification to mobile devices
+# Animations are created only if an object is detected
+
+[animation]
+# Seems like GIF/MP4 animations only
+# work in IOS. Too bad.
+
+# NOTE: Animation ONLY works with ZM 1.35 master as of Mar 16, 2020
+# You also require zmNinja 1.3.91 or above
+# If you are not running that version, animation will not work
+# Animation frames will be created, but they won't be pushed to your device
+
+# If yes, object detection will attempt to create 
+# a short GIF file around the object detection frame
+# that can be sent via push notifications for instant playback
+# Note this required additional software support. Default:no
+create_animation=no
+
+# Format of animation burst
+# valid options are "mp4", "gif", "mp4,gif"
+# Note that gifs will be of a shorter duration
+# as they take up much more disk space than mp4
+# Note that if you use mp4, the thumbnail that shows 
+# with push notifications may look transparent. My guess
+# is this is related to how the video is being formed
+# in ZM as it is a partial video when we process it
+
+# Note that if you use mp4, you need to change the picture_url
+# in zmeventnotification.ini to objdetect_mp4. When you use objdetect,
+# a GIF file is checked and if not, the image is returned. MP4 is not
+# returned, as they are not playable inside an HTML img tag
+
+animation_types='gif'
+
+# if animation_types is gif then when can generate a fast preview gif
+# every second frame is skipped and the frame rate doubled
+# to give quick preview, Default (no)
+fast_gif=no
+
+# default width of animation image. Be cautious when you increase this
+# most mobile platforms give a very brief amount of time (in seconds) 
+# to download the image.
+# Given your ZM instance will be serving the image, it will anyway be slow
+# Making the total animation size bigger resulted in the notification not 
+# getting an image at all (timed out)
+animation_width=640
+
+# animation_retry_sleep refers to how long to wait before trying to grab
+# frame information if it failed. animation_max_tries defines how many times it 
+# will try and retrieve frames before it gives up
+animation_retry_sleep=15
+animation_max_tries=3
+
+## --- MONITOR SPECIFIC CHANGES FROM HERE ON 
+## --- Every param above can be repeated inside
+## --- monitor specific sections and they will override
+## --- settings above
+
+## Monitor specific settings
+#
+# - Format:  [monitor-<mid>]
+
+# Examples:
+# Let's assume your monitor ID is 999
+[monitor-999]
+# my driveway
+match_past_detections=no
+wait=5
+
+object_detection_pattern=(person|car|motorbike|bus|truck|boat)
+
+# Advanced example - here we want anything except potted plant
+# exclusion in regular expressions is not
+# as straightforward as you may think, so 
+# follow this pattern
+# object_detection_pattern = ^(?!object1|object2|objectN)
+# the characters in front implement what is 
+# called a negative look ahead
+
+# object_detection_pattern=^(?!potted plant|pottedplant|bench|broccoli)
+#alpr_detection_pattern=^(.*x11)
+#delete_after_analyze=no
+#detection_pattern=.*
+#import_zm_zones=yes
+
+# polygon areas where object detection will be done.
+# You can name them anything except the keywords defined in the optional
+# params below. You can put as many polygons as you want per [monitor-<mid>]
+# (see examples).
+
+my_driveway_perimeter=306,356 1003,341 1074,683 154,715
+some_other_area=0,0,200,300,700,900
+# use license plate recognition for my driveway
+# see alpr section later for more data needed
+resize=no
+detection_sequence=object,alpr
 
 
