--- a/zmeventnotification/zmeventnotification/objectconfig.ini
+++ b/zmeventnotification/zmeventnotification/objectconfig.ini
@@ -7,7 +7,7 @@
 [general]
 
 # Please don't change this. It is used by the config upgrade script
-version=1.0
+version=1.1
 
 # This is an optional file
 # If specified, you can specify tokens with secret values in that file
@@ -441,7 +441,23 @@ object_detection_pattern=(person|car|motorbike|bus|truck|boat)
 # params below. You can put as many polygons as you want per [monitor-<mid>]
 # (see examples).
 
-my_driveway_perimeter=306,356 1003,341 1074,683 154,715
+my_driveway=306,356 1003,341 1074,683 154,715
+
+# You are now allowed to specify detection pattern per zone
+# the format is <polygonname>_zone_detection_pattern=<regexp>
+# So if your polygon is called my_driveway, its associated
+# detection pattern will be my_driveway_zone_detection_pattern
+# If none is specified, the value in object_detection_pattern 
+# will be used
+# This also applies to ZM zones. Let's assume you have 
+# import_zm_zones=yes and let's suppose you have a zone in ZM
+# called Front_Door. In that case, all you need to do is put in a 
+# front_door_zone_detection_pattern=(person|car) here
+#
+# NOTE: ZM Zones are converted to lowercase, and spaces are replaced
+# with underscores@3
+
+my_driveway_zone_detection_pattern=(person)
 some_other_area=0,0,200,300,700,900
 # use license plate recognition for my driveway
 # see alpr section later for more data needed
