--- a/zmeventnotification/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification/zmeventnotification.ini
@@ -87,6 +87,15 @@ token_file = {{base_data_path}}/push/tokens.txt
 
 date_format = %I:%M %p, %d-%b
 
+# Set priority for android push. Default is default.
+# You can set it to default, min, low, high or max
+# There is weird foo going on here. If you set it to high,
+# and don't interact with push, users report after a while they 
+# get delayed by Google. I haven't quite figured out what is the precise 
+# value to put here to make sure it always reaches you. Also make sure
+# you read the zmES faq on delayed push
+fcm_android_priority = default
+
 # Use MQTT for messaging (default: no)
 [mqtt]
 enable = no
@@ -138,13 +147,16 @@ key = !ES_KEY_FILE
 
 [customize]
 # Link to json file that has rules which can be customized
-# es_rules=/var/lib/zmeventnotification/es_rules.json
+# es_rules=/etc/zm/es_rules.json
+
 # Display messages to console (default: no).
+# Note that you can keep this to no and just
+# use --debug when running from CLI too
 console_logs = no
-# debug level for ES messages. Default 2. Note that this is
+# debug level for ES messages. Default 4. Note that this is
 # not controllable by ZM LOG_DEBUG_LEVEL as in Perl, ZM doesn't
 # support debug levels
-es_debug_level = 2
+es_debug_level = 4
 
 # Interval, in seconds, after which we will check for new events (default: 5).
 event_check_interval = 5
@@ -164,6 +176,11 @@ use_custom_notification_sound = no
 
 # include picture in alarm (default: no).
 include_picture = yes
+
+
+# send event start notifications (default: yes)
+# If no, starting notifications will not be sent out
+send_event_start_notification = yes
 
 # send event end notifications (default: no)
 # Note that if you are using hooks for end notifications, they may change
