--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
             - 9000:9000/tcp
         network_mode: "bridge"
         privileged: false
-        shm-size: "5G"
+        shm_size: 5G
         environment:
             - TZ=America/New_York
             - PUID=99
