--- a/zmeventnotification/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification/zmeventnotification.ini
@@ -186,7 +186,7 @@ send_event_start_notification = yes
 # Note that if you are using hooks for end notifications, they may change
 # the final decision. This needs to be yes if you want end notifications with 
 # or without hooks
-send_event_end_notification = yes
+send_event_end_notification = no
 
 # URL to access the event image
 # This URL can be anything you want
