Prepare for new Docker with ES/ML preinstalled.

--- a/docker-compose - gpu support.yaml
+++ b/docker-compose - gpu support.yaml
@@ -10,17 +10,11 @@ services:
         runtime: nvidia
         network_mode: "bridge"
         privileged: false
-        shm_size: 8G
+        shm_size=8G
         environment:
             - TZ=America/New_York
             - PUID=99
             - PGID=100
-            - INSTALL_HOOK=0
-            - INSTALL_FACE=0
-            - INSTALL_TINY_YOLOV3=0
-            - INSTALL_YOLOV3=0
-            - INSTALL_TINY_YOLOV4=0
-            - INSTALL_YOLOV4=0
             - MULTI_PORT_START=0
             - MULTI_PORT_END=0
         volumes:
