--- a/zmeventnotification/zmeventnotification.ini
+++ b/zmeventnotification/zmeventnotification.ini
@@ -186,7 +186,7 @@ send_event_start_notification = yes
 # Note that if you are using hooks for end notifications, they may change
 # the final decision. This needs to be yes if you want end notifications with 
 # or without hooks
-send_event_end_notification = no
+send_event_end_notification = yes
 
 # URL to access the event image
 # This URL can be anything you want
@@ -209,7 +209,7 @@ picture_portal_password=!ZM_PASSWORD
 # This makes it easy for folks not using hooks to just turn this off
 # default:no
 
-use_hooks = no
+use_hooks = yes
 
 [hook]
 
@@ -238,7 +238,7 @@ event_start_hook = '{{base_data_path}}/bin/zm_event_start.sh'
 # event_end_notify_on_hook_success. If the script returns "1" (fail)
 # then a notification is sent to channels specified in 
 # event_end_notify_on_hook_fail
-event_end_hook = '{{base_data_path}}/bin/zm_event_end.sh'
+# event_end_hook = '{{base_data_path}}/bin/zm_event_end.sh'
 
 #This script is called after event_end_hook completes. You can do 
 # your housekeeping work here
