Update ES to 6.1.15.

--- a/zmeventnotification/objectconfig.ini
+++ b/zmeventnotification/objectconfig.ini
@@ -57,6 +57,11 @@ match_past_detections=no
 # to calculate the difference in areas and based on his tests, 5% worked well. YMMV. Change it if needed.
 past_det_max_diff_area=5%
 
+# this is the maximum size a detected object can have. You can specify it in px or % just like past_det_max_diff_area 
+# This is pretty useful to eliminate bogus detection. In my case, depending on shadows and other lighting conditions, 
+# I sometimes see "car" or "person" detected that covers most of my driveway view. That is practically impossible 
+# and therefore I set mine to 70% because I know any valid detected objected cannot be larger than that area
+
 max_detection_size=90%
 
 # sequence of models to run for detection
