Update ES to 6.1.18.

--- a/zmeventnotification/objectconfig.ini
+++ b/zmeventnotification/objectconfig.ini
@@ -55,6 +55,10 @@ match_past_detections=no
 # can also be specified in px like 300px. Default is 5%. Basically, bounding boxes of the same
 # object can slightly differ ever so slightly between detection. Contributor @neillbell put in this PR
 # to calculate the difference in areas and based on his tests, 5% worked well. YMMV. Change it if needed.
+# Note: You can specify label/object specific max_diff_areas as well. If present, they override this value
+# example: 
+# person_past_det_max_diff_area=5%
+# car_past_det_max_diff_area=5000px
 past_det_max_diff_area=5%
 
 # this is the maximum size a detected object can have. You can specify it in px or % just like past_det_max_diff_area 
@@ -407,6 +411,8 @@ ml_sequence= {
 			},
 			'sequence': [{
 				#First run on TPU with higher confidence
+				'name': 'TPU object detection',
+				'enabled': 'no',
 				'object_weights':'{{tpu_object_weights_mobiledet}}',
 				'object_labels': '{{tpu_object_labels}}',
 				'object_min_confidence': {{tpu_min_confidence}},
@@ -419,6 +425,8 @@ ml_sequence= {
 			},
 			{
 				# YoloV4 on GPU if TPU fails (because sequence strategy is 'first')
+				'name': 'YoloV4 GPU/CPU',
+				'enabled': 'yes', # don't really need to say this explictly
 				'object_config':'{{yolo4_object_config}}',
 				'object_weights':'{{yolo4_object_weights}}',
 				'object_labels': '{{yolo4_object_labels}}',
@@ -436,9 +444,11 @@ ml_sequence= {
 		'face': {
 			'general':{
 				'pattern': '{{face_detection_pattern}}',
-				'same_model_sequence_strategy': 'first'
+				'same_model_sequence_strategy': 'union'
 			},
 			'sequence': [{
+				'name': 'DLIB based face recognition',
+				'enabled': 'yes',
 				'save_unknown_faces':'{{save_unknown_faces}}',
 				'save_unknown_faces_leeway_pixels':{{save_unknown_faces_leeway_pixels}},
 				'face_detection_framework': '{{face_detection_framework}}',
@@ -454,7 +464,15 @@ ml_sequence= {
 				'cpu_max_processes': {{cpu_max_processes}},
 				'cpu_max_lock_wait': {{cpu_max_lock_wait}},
 				'max_size':800
-			}]
+			},
+			{
+            'name': 'TPU face detection',
+            'enabled': 'no',
+            'face_detection_framework': 'tpu',
+            'face_weights':'/var/lib/zmeventnotification/models/coral_edgetpu/ssd_mobilenet_v2_face_quant_postprocess_edgetpu.tflite',
+            'face_min_confidence': 0.3,
+          
+        	}]
 		},
 
 		'alpr': {
@@ -465,6 +483,8 @@ ml_sequence= {
 
 			},
 			'sequence': [{
+				'name': 'Platerecognizer cloud',
+				'enabled': 'yes',
 				'alpr_api_type': '{{alpr_api_type}}',
 				'alpr_service': '{{alpr_service}}',
 				'alpr_key': '{{alpr_key}}',
